Napomena u zaglavlju: sve izvršavati u svom home direktoriju

--- a/OSvjezba_standalone.tex
+++ b/OSvjezba_standalone.tex
@@ -5,7 +5,7 @@
 
 \title
 {Operativni sustavi\\
-Vježba 5}
+Vježba 6}
 \date{}
 
 
@@ -23,8 +23,9 @@ Vježba 5}
 \begin{itemize}
 \item Sve naredbe dane u primjerima treba izvršiti.
 \item Na početku svake vježbe pokrenuti Linux Mint uz pomoć programa \textit{Virtual Machine Launcher}
+\item Ako nije drugačije navedeno, zadatke treba izvršavati u korisnikovom \texttt{home} direktoriju: \lstinline!~!
 \item Na kraju vježbe spremiti i uploadati povijest naredbi prema uputama za vježbe.
 
 \end{itemize}
-\input{OSvjezba05.tex}
+\input{OSvjezba06.tex}
 \end{document}
