Stilski sredjeno zaglavlje za standalone vjezbu

--- a/OSvjezba_standalone.tex
+++ b/OSvjezba_standalone.tex
@@ -5,27 +5,19 @@
 
 \title
 {Operativni sustavi\\
-Vježba 6}
+Vježba 7}
 \date{}
-
 
 \begin{document}
 \maketitle
 \todo[inline]{Radna verzija dokumenta (TODO nije zakomentiran) }
 
-% \item Sve naredbe dane u primjerima treba izvršiti.
-% \item Na početku svake vježbe obrisati stari \texttt{history} naredbom \texttt{history -c}.
-% \item Kreirati radni direktorij \texttt{vase\_prezime\_vjezbaxx} i u njemu izvršavati naredbe (\lstinline!mkdir vase_prezime_vjezbaxx!).
-% \item Na kraju vježbi spremiti i uploadati history prema uputama za vježbe.
-% \item Obrisati direktorij \texttt{vase\_prezime\_vjezbaxx} (\lstinline!rm -rf vase_prezime_vjezbaxx!).
-
-
 \begin{itemize}
-\item Sve naredbe dane u primjerima treba izvršiti.
-\item Na početku svake vježbe pokrenuti Linux Mint uz pomoć programa \textit{Virtual Machine Launcher}
+\item Na početku vježbe pokrenuti Linux Mint uz pomoć programa \textit{Virtual Machine Launcher}
+\item Sve primjere treba izvršiti.
 \item Ako nije drugačije navedeno, zadatke treba izvršavati u korisnikovom \texttt{home} direktoriju: \lstinline!~!
-\item Na kraju vježbe spremiti i uploadati povijest naredbi prema uputama za vježbe.
+\item Na kraju vježbe treba predati povijest naredbi na način kako je opisano u uputama za vježbe.
 
 \end{itemize}
-\input{OSvjezba06.tex}
+\input{OSvjezba07.tex}
 \end{document}
