include longtable package u standalone verziji

--- a/sa_preamble.tex
+++ b/sa_preamble.tex
@@ -28,6 +28,7 @@
 
 
 \usepackage{tabularx}
+\usepackage{longtable}
 
 \usepackage{verbatim}%
 \usepackage{upquote}%
@@ -324,7 +325,7 @@
 % VARIOUS
 %-----------------------------------------
 \usepackage{verbatim}
-%\usepackage{todonotes}
+\usepackage{todonotes}
 \usepackage[disable]{todonotes}
 \usepackage{bitset}
 
