Ujednačena sintaksa if-then s primjerom u vježbi 9

--- a/OSvjezba08.tex
+++ b/OSvjezba08.tex
@@ -74,8 +74,8 @@ Kod pridjeljivanja vrijednosti znak \lstinline!=! nije omeđen prazninama:\\
 
 \item Kod uspoređivanja, znak \texttt{=} je omeđen prazninama:
 \begin{lstlisting}
-if [ $str = "Nekistring" ]
-	then echo "je"
+if [ $str = "Nekistring" ]; then 
+	echo "je"
 else 
 	echo "nije"
 fi
