--- a/OSvjezba11.tex
+++ b/OSvjezba11.tex
@@ -10,7 +10,6 @@ GRUPA*100 + BROJ\_RACUNALA
 
 Primjer: student iz druge grupe koji sjedi na šestom računalu od ulaznih vrata u smjeru kazaljke na satu koristit će korisničko ime i lozinku 206.
 
-
 \subsection*{Rad na poslužitelju}
 Svaki korisnik na poslužitelju ima svoj direktorij (/home/username, odnosno \textasciitilde) i sve radnje treba obavljati unutar njega. Student ne bi trebao napuštati svoj direktorij, a u niti jednoj situaciji nije dozvoljeno pristupati tuđim podatcima. Općenito nije dozvoljeno na bilo koji način ugrožavati sigurnost ili remetiti rad sustava, te pristupati datotekama izvan vlastitog direktorija ili direktorija /materijali.
 
@@ -28,9 +27,9 @@ Svaki korisnik na poslužitelju ima svoj direktorij (/home/username, odnosno \te
 \begin{zadatak} U direktoriju \texttt{\textasciitilde}  kreirajte direktorij \texttt{zad1} i u njemu riješite sljedeće zadatke:
 	\begin{itemize}
 		\item Ispitajte koji je tekući direktorij.
-		\item Napravite direktorij \textasciitilde /zad01/tmp
+		\item Napravite direktorij \textasciitilde \texttt{/zad01/tmp}
 		\item Promjenite tekući direktorij u novokreirani direktorij.
-		\item u direktoriju tmp napravite datoteke \texttt{prva} \texttt{druga} \texttt{treca}.
+		\item u direktoriju \texttt{tmp} napravite datoteke \texttt{prva} \texttt{druga} \texttt{treca}.
 		\item Isprobajte naredbu \texttt{tree} i njen izlaz preusmjerite u datoteku \texttt{treeoutput}
 		\item Kopirajte datoteku \texttt{prva} u direktorij  \texttt{\textasciitilde}
 		\item Preimenujte datoteku \texttt{prva} u \texttt{prvatmp}
@@ -47,13 +46,13 @@ Svaki korisnik na poslužitelju ima svoj direktorij (/home/username, odnosno \te
 \end{zadatak}
 
 \begin{zadatak}
-	U direktoriju \texttt{\textasciitilde} kreirajte direktorij \texttt{zad3}  i uđite u njega. Datoteku \texttt{/materijali/mjesta} kopirajte u tekući direktorij. Datoteci \texttt{mjesta} dodijelite takva prava da samo vlasnik može čitati sadržaj datoteke.
+	U direktoriju \texttt{\textasciitilde} kreirajte direktorij \texttt{zad3}  i uđite u njega. Datoteku \texttt{/materijali /mjesta} kopirajte u tekući direktorij. Datoteci \texttt{mjesta} dodijelite takva prava da samo vlasnik može čitati sadržaj datoteke.
 \end{zadatak}
 
 \begin{zadatak}
-	U direktoriju \texttt{\textasciitilde}  kreirajte direktorij \texttt{zad4}. Datoteku \texttt{/materijali/mjesta} kopirajte u tekući direktorij. Sadržaj datoteke \texttt{mjesta} sortirajte po abecedi i izlaz upišite u datoteku \texttt{mjesta\_sort} 
+	U direktoriju \texttt{\textasciitilde}  kreirajte direktorij \texttt{zad4} i uđite u njega. Datoteku \texttt{/materijali/mjesta} kopirajte u tekući direktorij. Sadržaj datoteke \texttt{mjesta} sortirajte po abecedi i izlaz upišite u datoteku \texttt{mjesta\_sort} 
 \end{zadatak}
 
 \subsection*{Prebacivanje povijesti naredbi na sustav Moodle}
 
-Naredbom \texttt{sharehistory} uploadajte povijest naredbi na web. Otvorite dobiveni link u pregledniku i kopirajte naredbe u tekstualnu datoteku koju ćete predati na Moodle prema uobičajenim pravilima.
+Naredbom \texttt{sharehistory} uploadajte povijest naredbi na web (\texttt{sharehistory} je skripta i nije standardna Linux naredba). Otvorite dobivenu poveznicu u pregledniku i kopirajte povijest u tekstualnu datoteku koju ćete predati na Moodle prema uobičajenim pravilima.
